samples/_failures_safe/1761392701_914657_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_291a76f4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_291a76f4.c:163:9: error: expected declaration or statement at end of input
  163 |         token_count++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_291a76f4.c:163:9: error: expected declaration or statement at end of input
